--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collapsible Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/helloagent/style.css">
     <!-- Heroicons (for icons) -->
     <script src="https://unpkg.com/heroicons@1.0.6/dist/outline.js"></script>
   </head>
