--- a/ai-voice-creation.html
+++ b/ai-voice-creation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Ai Voice Creation</title>
     <link rel="stylesheet" href="style.css">
     <!-- Heroicons (for icons) -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -125,7 +125,7 @@
         <div class="innerContainer sm:mx-auto sm:w-full sm:max-w-2xl">
         <!-- Example content header -->
             <header class="mb-6 relative">
-                <h2 class="text-3xl text-center text-darkTeal font-bold">Home</h2>
+                <h2 class="text-3xl text-center text-darkTeal font-bold">AI Voice Creation</h2>
                 <img class="mx-auto my-6" src="/images/user-edit-image.png" alt="">
                 <img class="absolute right-0 top-1/2 cursor-pointer w-7" src="/images/save-icon.svg" alt="">
               </header>
