--- a/sign-up.html
+++ b/sign-up.html
@@ -17,7 +17,7 @@
             <div class="backLink "><a class="flex gap-3" href="/login.html"><i class="leftIconArrow ri-arrow-left-line"></i>
                 <p>Back</p></a>
             </div>
-            <img class="mx-auto h-10 w-auto" src="/images/hellog-agent-logo.svg" alt="Hello Agent Logo">
+            <a href="/"><img class="mx-auto h-10 w-auto" src="/images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
             <h2 class="mt-10 text-center text-[42px] font-bold tracking-tight text-darkTeal">Sign Up</h2>
             <p class="text-[16px] text-center">Join Us Today!</p>
 
@@ -94,59 +94,10 @@
             <img src="/images/Ellipse-bg1.png" alt="">
         </div>
 
-        <!-- Toggle Password Script -->
-        <script>
-            function togglePassword(fieldId, el) {
-                const input = document.getElementById(fieldId);
-                if (input.type === 'password') {
-                    input.type = 'text';
-                    el.innerHTML = `<svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M13.875 18.825a4.992 4.992 0 01-1.875.375c-4.478 0-8.268-2.943-9.542-7
-              1.274-4.057 5.064-7 9.542-7 1.305 0 2.549.254 3.688.71" />
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M2.458 12C3.732 7.943 7.522 5 12 5
-              c1.305 0 2.549.254 3.688.71M18.542 7C19.816 7 20.606 7 21 7
-              M19.354 19.354l-14-14" />
-          </svg>`;
-                } else {
-                    input.type = 'password';
-                    el.innerHTML = `<svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-            />
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M2.458 12C3.732 7.943 7.522 5 12 5
-              c4.478 0 8.268 2.943 9.542 7
-              -1.274 4.057-5.064 7-9.542 7
-              -4.478 0-8.268-2.943-9.542-7z"
-            />
-          </svg>`;
-                }
-            }
-        </script>
+      
     </div>
 
+    <script src="/js/script.js"></script>
 
 </body>
 
