--- a/index.html
+++ b/index.html
@@ -222,6 +222,6 @@
 
     <!-- Collapsing Sidebar Script -->
 
-  <script src="../helloagent/js/script.js"></script>
+  <script src="/js/script.js"></script>
   </body>
 </html>
