--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </a>
 
         <!-- Call Logs Link -->
-        <a href="/call-logs.html"
+        <a href="call-logs.html"
             class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
             <!-- Replace with your call logs icon -->
             <img src="images/call-log-icon.svg" alt="Call Logs Icon" class="w-5 h-5" />
@@ -90,23 +90,23 @@
 
             <!-- Settings Submenu -->
             <div id="settingsSubmenu" class="hidden pl-8 mt-1 space-y-1 sidebar-submenu">
-                <a href="/set-ai-voice.html" class="block px-3 py-2 rounded lightGray dark:hover:teal">
+                <a href="set-ai-voice.html" class="block px-3 py-2 rounded lightGray dark:hover:teal">
                     Set Voice
                 </a>
-                <a href="/ai-voice-profile.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="ai-voice-profile.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     Voice Profiles
                 </a>
-                <a href="/ai-voice-creation" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="ai-voice-creation.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     Voice Creations
                 </a>
-                <a href="/ai-voice-collection" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="ai-voice-collection.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     Voice Collection
                 </a>
             </div>
         </div>
 
         <!-- Help Link -->
-        <a href="/help" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+        <a href="help.html" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
             <!-- Replace with your help icon -->
             <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
             <span class="ml-3 sidebar-text">Help</span>
