--- a/ai-voice-profile.html
+++ b/ai-voice-profile.html
@@ -74,17 +74,17 @@
                         <a href="/ai-voice-profile.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Profiles
                         </a>
-                        <a href="/ai-voice-creation" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                        <a href="/ai-voice-creation.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Creations
                         </a>
-                        <a href="/ai-voice-collection" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                        <a href="/ai-voice-collection.html" class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Collection
                         </a>
                     </div>
                 </div>
 
                 <!-- Help Link -->
-                <a href="/help" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="/help.html" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your help icon -->
                     <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Help</span>
