add images path

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- END SIDEBAR -->
 
       <!-- MAIN CONTENT -->
-      <main style="background-image: url(/images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;" class="flex-1 p-6">
+      <main style="background-image: url(images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;" class="flex-1 p-6">
         <div class="innerContainer sm:mx-auto sm:w-full sm:max-w-2xl">
         <!-- Example content header -->
             <header class="mb-6 relative">
