--- a/set-ai-voice.html
+++ b/set-ai-voice.html
@@ -19,7 +19,7 @@
             <!-- Header with brand + hamburger -->
             <div class="flex items-center justify-between p-4 bg-white">
                 <div class="flex items-center space-x-2">
-                    <img src="/images/hellog-agent-logo.svg" alt="Logo" class=" rounded-full" />
+                    <img src="images/hellog-agent-logo.svg" alt="Logo" class=" rounded-full" />
                 </div>
                 <button id="hamburgerBtn" class="p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none">
                     <!-- Hamburger Icon -->
@@ -32,7 +32,7 @@
 
             <!-- User Info -->
             <div class="flex items-center p-4 space-x-2 bg-lightGray">
-                <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
+                <img src="images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
                 <p class="font-semibold sidebar-text text-darkTeal"><span class="font-normal">Hello</span>, {Customer}
                 </p>
             </div>
@@ -42,7 +42,7 @@
                 <!-- Home Link -->
                 <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your home icon -->
-                    <img src="/images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
+                    <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Home</span>
                 </a>
 
@@ -93,14 +93,14 @@
 
             <!-- Dark/Light Mode Toggle at the Bottom -->
             <div class="p-4 flex justify-center">
-                <img src="/images/toggle.png" alt="">
+                <img src="images/toggle.png" alt="">
             </div>
         </aside>
         <!-- END SIDEBAR -->
 
         <!-- MAIN CONTENT -->
         <main
-            style="background-image: url(/images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;"
+            style="background-image: url(images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;"
             class="flex-1 flex-col mx-auto lg:py-6 lg:px-10 md:p-5 sm:p-4 p-2   ">
             <!-- Example content header -->
             <header class="lg:mb-6 md:mb-4 mb-2 relative flex justify-end lg:px-4 items-center gap-4">
@@ -112,7 +112,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray md:px-3 md:py-6 px-6 py-10 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/grace-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/grace-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Grace</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -131,7 +131,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/Leslie-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/Leslie-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Leslie</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. nec ligula metus. Aenean risus velit, lobortis vitae nibh eget, imperdiet faucibus.</p>
                         <div class="player-box mt-5 flex justify-between gap-2 w-full">
@@ -148,7 +148,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/Sydney-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/Sydney-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Sydney</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -167,7 +167,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/Kai-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/Kai-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Kai</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -186,7 +186,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/sean-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/sean-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Sean</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -205,7 +205,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/rob.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/rob.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Rob</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -224,7 +224,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/tina-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/tina-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Tina</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
@@ -243,7 +243,7 @@
                 <div class="xl:w-1/4 md:w-1/2 lg:p-4 p-1">
                     <div
                         class="set-ai-voice-cols bg-lightGray px-3 py-6 flex  flex-col items-center justify-center gap-2 rounded-xl">
-                        <img class="rounded w-20 object-cover object-center" src="/images/fionna-img.svg" alt="content">
+                        <img class="rounded w-20 object-cover object-center" src="images/fionna-img.svg" alt="content">
                         <h2 class="text-2xl font-semibold title-font text-darkTeal">Fionna</h2>
                         <p class="leading-5 text-base text-center lg:text-[14px]">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Suspendisse consectetur mollis libero. Praesent nec
