--- a/sign-up.html
+++ b/sign-up.html
@@ -11,13 +11,13 @@
 
 <body>
 
-    <div style="background-image: url(/images/hello-agent-bg.png);background-position: center right;background-repeat: no-repeat;background-size: 43%;"
+    <div style="background-image: url(images/hello-agent-bg.png);background-position: center right;background-repeat: no-repeat;background-size: 43%;"
         class="flex min-h-screen flex-col justify-center items-center px-6 py-12 lg:px-8 bg-lightGray relative overflow-hidden">
         <div class="relative z-10 sm:mx-auto sm:w-full sm:max-w-lg bg-white pb-10 pt-5 px-10 rounded-3xl">
             <div class="backLink "><a class="flex gap-3" href="/login.html"><i class="leftIconArrow ri-arrow-left-line"></i>
                 <p>Back</p></a>
             </div>
-            <a href="/"><img class="mx-auto h-10 w-auto" src="/images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
+            <a href="/"><img class="mx-auto h-10 w-auto" src="images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
             <h2 class="mt-10 text-center text-[42px] font-bold tracking-tight text-darkTeal">Sign Up</h2>
             <p class="text-[16px] text-center">Join Us Today!</p>
 
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="absolute -left-[21rem] -top-[20rem] -z-1  border-1  rounded-full overflow-hidden">
-            <img src="/images/Ellipse-bg1.png" alt="">
+            <img src="images/Ellipse-bg1.png" alt="">
         </div>
 
       
