--- a/ai-voice-collection.html
+++ b/ai-voice-collection.html
@@ -19,7 +19,7 @@
             <!-- Header with brand + hamburger -->
             <div class="flex items-center justify-between p-4 bg-white">
                 <div class="flex items-center space-x-2">
-                    <img src="/images/hellog-agent-logo.svg" alt="Logo" class=" rounded-full" />
+                    <img src="images/hellog-agent-logo.svg" alt="Logo" class=" rounded-full" />
                 </div>
                 <button id="hamburgerBtn" class="p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none">
                     <!-- Hamburger Icon -->
@@ -32,7 +32,7 @@
 
             <!-- User Info -->
             <div class="flex items-center p-4 space-x-2 bg-lightGray">
-                <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
+                <img src="images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
                 <p class="font-semibold sidebar-text text-darkTeal"><span class="font-normal">Hello</span>, {Customer}
                 </p>
             </div>
@@ -42,7 +42,7 @@
                 <!-- Home Link -->
                 <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your home icon -->
-                    <img src="/images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
+                    <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Home</span>
                 </a>
 
@@ -84,7 +84,7 @@
                 </div>
 
                 <!-- Help Link -->
-                <a href="/help" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="/help.html" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your help icon -->
                     <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Help</span>
@@ -93,14 +93,14 @@
 
             <!-- Dark/Light Mode Toggle at the Bottom -->
             <div class="p-4 flex justify-center">
-                <img src="/images/toggle.png" alt="">
+                <img src="images/toggle.png" alt="">
             </div>
         </aside>
         <!-- END SIDEBAR -->
 
         <!-- MAIN CONTENT -->
         <main
-            style="background-image: url(/images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;"
+            style="background-image: url(images/hello-agent-bg.png);background-position: bottom right;background-repeat: no-repeat;background-size: 43%;"
             class="flex-1 flex-col mx-auto lg:py-6 lg:px-14 md:p-5 sm:p-4 p-2   ">
            
             <div class="mx-auto text-center">
