--- a/ai-voice-creation.html
+++ b/ai-voice-creation.html
@@ -22,7 +22,7 @@
         <div class="flex items-center justify-between p-4 bg-white">
           <div class="flex items-center space-x-2">
             <img
-              src="/images/hellog-agent-logo.svg"
+              src="images/hellog-agent-logo.svg"
               alt="Logo"
               class=" rounded-full"
             />
@@ -52,7 +52,7 @@
         <!-- User Info -->
         <div class="flex items-center p-4 space-x-2 bg-lightGray">
           <img
-            src="/images/user-image.png"
+            src="images/user-image.png"
             alt="User"
             class="w-8 h-8 rounded-full"
           />
@@ -64,7 +64,7 @@
           <!-- Home Link -->
           <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
             <!-- Replace with your home icon -->
-            <img src="/images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
+            <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
             <span class="ml-3 sidebar-text">Home</span>
         </a>
 
@@ -115,7 +115,7 @@
 
         <!-- Dark/Light Mode Toggle at the Bottom -->
         <div class="p-4 flex justify-center">
-         <img src="/images/toggle.png" alt="">
+         <img src="images/toggle.png" alt="">
         </div>
       </aside>
       <!-- END SIDEBAR -->
@@ -126,8 +126,8 @@
         <!-- Example content header -->
             <header class="mb-6 relative">
                 <h2 class="text-3xl text-center text-darkTeal font-bold">AI Voice Creation</h2>
-                <img class="mx-auto my-6" src="/images/user-edit-image.png" alt="">
-                <img class="absolute right-0 top-1/2 cursor-pointer w-7" src="/images/save-icon.svg" alt="">
+                <img class="mx-auto my-6" src="images/user-edit-image.png" alt="">
+                <img class="absolute right-0 top-1/2 cursor-pointer w-7" src="images/save-icon.svg" alt="">
               </header>
       
               <!-- Example form content (use your own form) -->
