--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Header with brand + hamburger -->
         <div class="flex items-center justify-between p-4 bg-white">
           <div class="flex items-center space-x-2">
-            <a href="/"><img
+            <a href="/helloagent/"><img
               src="images/hellog-agent-logo.svg"
               alt="Logo"
               class=" rounded-full"
