--- a/help.html
+++ b/help.html
@@ -21,7 +21,7 @@
         <!-- Header with brand + hamburger -->
         <div class="flex items-center justify-between p-4 bg-white">
           <div class="flex items-center space-x-2">
-            <a href="/helloagent/"><img
+            <a href="/"><img
               src="images/hellog-agent-logo.svg"
               alt="Logo"
               class=" rounded-full"
@@ -62,7 +62,7 @@
         <!-- NAVIGATION -->
          <nav class="flex flex-col h-[380px] px-2 space-y-1 mt-4 text-darkTeal dark:text-darkTeal">
           <!-- Home Link -->
-          <a href="/helloagent/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+          <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
             <!-- Replace with your home icon -->
             <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
             <span class="ml-3 sidebar-text">Home</span>
