--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
         </form>
     
         <p class="mt-10 text-center text-sm/6 text-gray-500">
-          <a href="/sign-up.html" class="font-semibold text-[20px] underline text-darkteal hover:text-darkGray">Create Account</a>
+          <a href="/helloagent/sign-up.html" class="font-semibold text-[20px] underline text-darkteal hover:text-darkGray">Create Account</a>
         </p>
       </div>
     </div>
