Added Tailwind Properly, Move JS to one file and fixed some UI Issues

--- a/call-logs.html
+++ b/call-logs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Call Logs</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles.css">
     <!-- Heroicons (for icons) -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
@@ -42,14 +42,14 @@
             <!-- NAVIGATION -->
             <nav class="flex flex-col h-[380px] px-2 space-y-1 mt-4 text-darkTeal dark:text-darkTeal">
                 <!-- Home Link -->
-                <a href="/helloagent/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your home icon -->
                     <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Home</span>
                 </a>
 
                 <!-- Call Logs Link -->
-                <a href="/helloagent/call-logs.html"
+                <a href="/call-logs.html"
                     class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your call logs icon -->
                     <img src="images/call-log-icon.svg" alt="Call Logs Icon" class="w-5 h-5" />
@@ -70,19 +70,19 @@
 
                     <!-- Settings Submenu -->
                     <div id="settingsSubmenu" class="hidden pl-8 mt-1 space-y-1 sidebar-submenu">
-                        <a href="/helloagent/set-ai-voice.html"
+                        <a href="/set-ai-voice.html"
                             class="block px-3 py-2 rounded lightGray dark:hover:teal">
                             Set Voice
                         </a>
-                        <a href="/helloagent/ai-voice-profile.html"
+                        <a href="/ai-voice-profile.html"
                             class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Profiles
                         </a>
-                        <a href="/helloagent/ai-voice-creation.html"
+                        <a href="/ai-voice-creation.html"
                             class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Creations
                         </a>
-                        <a href="/helloagent/ai-voice-collection.html"
+                        <a href="/ai-voice-collection.html"
                             class="block px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                             Voice Collection
                         </a>
@@ -90,7 +90,7 @@
                 </div>
 
                 <!-- Help Link -->
-                <a href="/helloagent/help.html"
+                <a href="/help.html"
                     class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your help icon -->
                     <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
