--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
         </form>
     
         <p class="mt-10 text-center text-sm/6 text-gray-500">
-          <a href="/helloagent/sign-up.html" class="font-semibold text-[20px] underline text-darkteal hover:text-darkGray">Create Account</a>
+          <a href="/sign-up.html" class="font-semibold text-[20px] underline text-darkteal hover:text-darkGray">Create Account</a>
         </p>
       </div>
     </div>
