--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
@@ -14,7 +14,7 @@
     <div style="background-image: url(images/hello-agent-bg.png);background-position: center right;background-repeat: no-repeat;background-size: 43%;"
         class="flex min-h-screen flex-col justify-center items-center px-6 py-12 lg:px-8 bg-lightGray relative overflow-hidden">
         <div class="relative z-10 sm:mx-auto sm:w-full sm:max-w-lg bg-white pb-10 pt-5 px-10 rounded-3xl">
-            <div class="backLink "><a class="flex gap-3" href="/helloagent/login.html"><i class="leftIconArrow ri-arrow-left-line"></i>
+            <div class="backLink "><a class="flex gap-3" href="/login.html"><i class="leftIconArrow ri-arrow-left-line"></i>
                 <p>Back</p></a>
             </div>
             <a href="/"><img class="mx-auto h-10 w-auto" src="images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
