UI Fixes, Mobile + Tablet fixes, filter dropdown added, table UI fixed. Sidebar UI fixes

--- a/call-logs.html
+++ b/call-logs.html
@@ -20,7 +20,7 @@
             <!-- Header with brand + hamburger -->
             <div class="flex items-center justify-between p-4 bg-white">
                 <div class="flex items-center space-x-2">
-                    <a href="/"><img src="images/hellog-agent-logo.svg" alt="Logo"
+                    <a href="/"><img src="images/logo.svg" alt="Logo"
                             class=" rounded-full" /></a>
                 </div>
                 <button id="hamburgerBtn" class="p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none">
@@ -42,7 +42,7 @@
             <!-- NAVIGATION -->
             <nav class="flex flex-col h-[380px] px-2 space-y-1 mt-4 text-darkTeal dark:text-darkTeal">
                 <!-- Home Link -->
-                <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your home icon -->
                     <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Home</span>
@@ -50,7 +50,7 @@
 
                 <!-- Call Logs Link -->
                 <a href="/call-logs.html"
-                    class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                    class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your call logs icon -->
                     <img src="images/call-log-icon.svg" alt="Call Logs Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Call Logs</span>
@@ -59,7 +59,7 @@
                 <!-- SETTINGS (with Submenu) -->
                 <div>
                     <!-- Settings Toggle -->
-                    <button type="button" id="settingsBtn" class="w-full flex items-center px-3 py-2 rounded hover:bg-lightGray
+                    <button type="button" id="settingsBtn" class="w-full flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray
                    dark:hover:teal focus:outline-none">
                         <!-- Replace with your settings icon -->
                         <img src="images/setting-icon.svg" alt="Settings Icon" class="w-5 h-5" />
@@ -91,7 +91,7 @@
 
                 <!-- Help Link -->
                 <a href="/help.html"
-                    class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+                    class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
                     <!-- Replace with your help icon -->
                     <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
                     <span class="ml-3 sidebar-text">Help</span>
