--- a/ai-voice-collection.html
+++ b/ai-voice-collection.html
@@ -22,7 +22,7 @@
         <div class="flex items-center justify-between p-4 bg-white">
           <div class="flex items-center space-x-2">
             <a href="/"><img
-              src="images/hellog-agent-logo.svg"
+              src="images/logo.svg"
               alt="Logo"
               class=" rounded-full"
             /></a>
@@ -62,7 +62,7 @@
         <!-- NAVIGATION -->
         <nav class="flex flex-col h-[380px] px-2 space-y-1 mt-4 text-darkTeal dark:text-darkTeal">
           <!-- Home Link -->
-          <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+          <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
               <!-- Replace with your home icon -->
               <img src="images/home-icon.svg" alt="Home Icon" class="w-5 h-5" />
               <span class="ml-3 sidebar-text">Home</span>
@@ -70,7 +70,7 @@
 
           <!-- Call Logs Link -->
           <a href="/call-logs.html"
-              class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+              class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
               <!-- Replace with your call logs icon -->
               <img src="images/call-log-icon.svg" alt="Call Logs Icon" class="w-5 h-5" />
               <span class="ml-3 sidebar-text">Call Logs</span>
@@ -79,7 +79,7 @@
           <!-- SETTINGS (with Submenu) -->
           <div>
               <!-- Settings Toggle -->
-              <button type="button" id="settingsBtn" class="w-full flex items-center px-3 py-2 rounded hover:bg-lightGray
+              <button type="button" id="settingsBtn" class="w-full flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray
                  dark:hover:teal focus:outline-none">
                   <!-- Replace with your settings icon -->
                   <img src="images/setting-icon.svg" alt="Settings Icon" class="w-5 h-5" />
@@ -106,7 +106,7 @@
           </div>
 
           <!-- Help Link -->
-          <a href="/help.html" class="flex items-center px-3 py-2 rounded hover:bg-lightGray dark:hover:teal">
+          <a href="/help.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 hover:bg-lightGray dark:hover:teal">
               <!-- Replace with your help icon -->
               <img src="images/help-icon.svg" alt="Help Icon" class="w-5 h-5" />
               <span class="ml-3 sidebar-text">Help</span>
@@ -156,7 +156,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -171,7 +171,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -186,7 +186,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -201,7 +201,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -216,7 +216,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -231,7 +231,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -246,7 +246,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
@@ -261,7 +261,7 @@
                                             <i class="ri-play-fill text-white md:text-xl text-lg ml-1"></i>
                                         </div>
                                         <div class="eco-box w-full bg-white rounded-lg hidden lg:flex  justify-center p-1">
-                                            <img class="lg:w-38 w-full" src="images/beats-icon.png" alt="">
+                                            <img class="w-[7rem]" src="images/beats-icon.png" alt="Sound">
                                         </div>
                                     </div>
                                 </td>
