--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
 <div style="background-image: url(images/hello-agent-bg.png);background-position: center right;background-repeat: no-repeat;background-size: 43%;" class="flex min-h-screen flex-col justify-center items-center px-6 py-12 lg:px-8 bg-lightGray relative overflow-hidden">
     <div class="relative z-10 sm:mx-auto sm:w-full sm:max-w-lg bg-white py-20 px-10 rounded-3xl">
-      <a href="/"><img class="mx-auto h-10 w-auto" src="images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
+      <a href="/"><img class="mx-auto h-10 w-auto" src="images/logo.svg" alt="Hello Agent Logo"></a>
       <h2 class="mt-10 text-center text-[42px] font-bold tracking-tight text-darkTeal">Login</h2>
       <p class="text-[16px] text-center">Welcome back! Please login to access your account.</p>
 
