--- a/sign-up.html
+++ b/sign-up.html
@@ -17,7 +17,7 @@
             <div class="backLink "><a class="flex gap-3" href="/login.html"><i class="leftIconArrow ri-arrow-left-line"></i>
                 <p>Back</p></a>
             </div>
-            <a href="/"><img class="mx-auto h-10 w-auto" src="images/hellog-agent-logo.svg" alt="Hello Agent Logo"></a>
+            <a href="/"><img class="mx-auto h-10 w-auto" src="images/logo.svg" alt="Hello Agent Logo"></a>
             <h2 class="mt-10 text-center text-[42px] font-bold tracking-tight text-darkTeal">Sign Up</h2>
             <p class="text-[16px] text-center">Join Us Today!</p>
 
